--- a/10_days_assignment/templated.co/layout-2/index.html
+++ b/10_days_assignment/templated.co/layout-2/index.html
@@ -12,14 +12,14 @@
 </head>
 <body>
 	<header class="head cf">
-		<span class="inline-blk sec-clr"><a class="a logo inline-blk sec-clr" href="#">faction</a> by pixelarity</span>
+		<span class="inline-blk sec-clr"><a class="logo inline-blk sec-clr" href="#">faction</a> by pixelarity</span>
 		<nav class="nav-lst inline-blk">
 			<ul>
-				<li class="list inline-blk"><a class="a links sec-clr" href="#">home</a></li>
+				<li class="list inline-blk"><a class="links sec-clr" href="#">home</a></li>
 				<li class="list inline-blk">
-					<a class=" dropdown-list a links sec-clr" href="#">
+					<a class=" dropdown-list links sec-clr" href="#">
 					<i class="fas fa-angle-down"></i>dropdown</a>
-					<ul class="dropdown-content">
+					<!-- <ul class="dropdown-content">
 						<li class="lst-2">home</li>
 						<li class="lst-2">first</li>
 						<li class="lst-2">second</li>
@@ -34,204 +34,245 @@
 								<li class="lst-2">home</li>
 							</ul>
 						</li>
-					</ul>
+					</ul> -->
 				</li>
-				<li class="list inline-blk"><a class="a links sec-clr" href="#">generic</a></li>
-				<li class="list inline-blk"><a class="a links sec-clr" href="#">elements</a></li>
-				<button class="btn top-btn sec-clr top">log in</button>
+				<li class="list inline-blk"><a class="links sec-clr" href="#">generic</a></li>
+				<li class="list inline-blk"><a class="links sec-clr" href="#">elements</a></li>
+				<button class="btn header-btn sec-clr top">log in</button>
 			</ul>
 		</nav>
 		
 	</header>
 
-	<main class="page wrapper">
-		<aside class="left-sec inline-blk">
-			<div class="bg-img">
-				<img class="img" src="assets/media/slide04.jpg">
-				<div class="img-txt sec-clr">
-					<h1>Ultricies sed magna</h1>
-					<p>
-						Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor ipsum dolor.
-						Magna sed dolor
-						Sed mattis nunc lorem
-						Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida fringilla.
-					</p>
-					<button class="btn sec-clr">click here for more</button>
-				</div>
-			</div>
-			<div class="container txt-box">
-				<h2 class="head-clr">Sed mattis nunc lorem</h2>
-				<p>Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla lorem.</p>
-			</div>
+	<!-- main section -->
+	<main class="page">
+		<div class=" wrapper">
 
-			<section class="left-icon-sec inline-blk">
-				<div class="container icon-box top-row lft-vt-clm inline-blk">
-					<div class="icon-bg inline-blk">
-						<i class="far fa-gem"></i>
-					</div><!-- 
-			 --><div class="icon-txt inline-blk">
-						<h4 class="head-clr">Nisl sed vitae</h4>
-						<p>Nullam et orci sed lorem magna et vivamus sagittis libero.</p>
-					</div>
-				</div><!-- 
-		 --><div class="container icon-box top-row inline-blk">
-					<div class="icon-bg inline-blk">
-				 		<i class="far fa-save"></i>
-				 	</div><!-- 
-			 --><div class="icon-txt inline-blk">
-						<h4 class="head-clr">Sed mattis nunc</h4>
+			<!-- left aside section -->
+			<aside class="left-sec inline-blk">
+				<div class="bg-img">
+					<img class="img" src="assets/media/slide04.jpg">
+					<div class="img-txt sec-clr">
+						<h1>Ultricies sed magna</h1>
 						<p>
-							Duis non efficitur nisi, sed justo. Maecenas sagittis semper.
+							Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor ipsum dolor.
+							Magna sed dolor
+							Sed mattis nunc lorem
+							Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida fringilla.
 						</p>
+						<button class="btn sec-clr">click here for more</button>
 					</div>
-				</div><!-- 
-			--><div class="container icon-box bottom-row lft-vt-clm inline-blk">
-					<div class="icon-bg inline-blk">
-				 		<i class="fas fa-laptop"></i>
-				 	</div><!-- 
-				 	 --><div class="icon-txt inline-blk">
-						<h4 class="head-clr">Porta ultricies</h4>
-						<p>Maecenas sagittis felis ac sagittis semper. Curabitur purus leo.</p>
-					</div>
-				</div><!-- 
-				 --><div class="container icon-box bottom-row inline-blk">
-		 			<div class="icon-bg inline-blk">
-				 		<i class="fas fa-paper-plane"></i>
-				 	</div><!-- 
-				 	 --><div class="icon-txt inline-blk">
-						<h4 class="head-clr">Magna tellus</h4>
-						<p>Auctor orci eu dolor consectetur, interdum ullamcorper ante.</p>
-					</div>
-				</div><!-- 
-				 --><div class="container icon-box lft-vt-clm inline-blk">
-				 	<div class="inline-blk">
-						<img src="assets/media/pic01.jpg">
-					</div>
-					<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
-					<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
-					<button class="btn">learn more</button>
-				</div><!-- 
-				 --><div class="container icon-box inline-blk">
-					<div class="inline-blk">
-						<img src="assets/media/pic02.jpg">
-					</div>
-					<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
-					<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
-					<button class="btn">learn more</button>
-				</div><!-- 
+				</div>
+				<div class="container txt-box">
+					<h2 class="head-clr">Sed mattis nunc lorem</h2>
+					<p>Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla lorem.</p>
+				</div>
 
-		 --><div class="container icon-box lft-vt-clm inline-blk">
-					<div>
-						<img src="assets/media/pic03.jpg">
+				<!-- left-sec icon & img-box section -->
+				<section class="left-icon-sec inline-blk">
+					<div class="container icon-box top-row lft-vt-clm inline-blk">
+						<div class="icon-bg inline-blk">
+							<i class="far fa-gem"></i>
+						</div><!-- 
+				 --><div class="icon-txt inline-blk">
+							<h4 class="head-clr">Nisl sed vitae</h4>
+							<p>Nullam et orci sed lorem magna et vivamus sagittis libero.</p>
+						</div>
+					</div><!-- 
+			 --><div class="container icon-box top-row inline-blk">
+						<div class="icon-bg inline-blk">
+					 		<i class="far fa-save"></i>
+					 	</div><!-- 
+				 --><div class="icon-txt inline-blk">
+							<h4 class="head-clr">Sed mattis nunc</h4>
+							<p>
+								Duis non efficitur nisi, sed justo. Maecenas sagittis semper.
+							</p>
+						</div>
+					</div><!-- 
+				--><div class="container icon-box bottom-row lft-vt-clm inline-blk">
+						<div class="icon-bg inline-blk">
+					 		<i class="fas fa-laptop"></i>
+					 	</div><!-- 
+					 	 --><div class="icon-txt inline-blk">
+							<h4 class="head-clr">Porta ultricies</h4>
+							<p>Maecenas sagittis felis ac sagittis semper. Curabitur purus leo.</p>
+						</div>
+					</div><!-- 
+					 --><div class="container icon-box bottom-row inline-blk">
+			 			<div class="icon-bg inline-blk">
+					 		<i class="fas fa-paper-plane"></i>
+					 	</div><!-- 
+					 	 --><div class="icon-txt inline-blk">
+							<h4 class="head-clr">Magna tellus</h4>
+							<p>Auctor orci eu dolor consectetur, interdum ullamcorper ante.</p>
+						</div>
+					</div><!-- 
+					 --><div class="container icon-box lft-vt-clm inline-blk">
+					 	<div class="inline-blk">
+							<img src="assets/media/pic01.jpg">
+						</div>
+						<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
+						<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
+						<button class="btn">learn more</button>
+					</div><!-- 
+					 --><div class="container icon-box inline-blk">
+						<div class="inline-blk">
+							<img src="assets/media/pic02.jpg">
+						</div>
+						<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
+						<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
+						<button class="btn">learn more</button>
+					</div><!-- 
+
+			 --><div class="container icon-box lft-vt-clm inline-blk">
+						<div>
+							<img src="assets/media/pic03.jpg">
+						</div>
+						<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
+						<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
+						<button class="btn">learn more</button>
+					</div><!-- 
+
+			 --><div class="container icon-box  inline-blk">
+						<div>
+							<img src="assets/media/pic04.jpg">
+						</div>
+						<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
+						<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
+						<button class="btn">learn more</button>
 					</div>
-					<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
-					<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
+				</section>
+			</aside><!--
+
+			
+			right aside section
+			 --><aside class="right-sec inline-blk">
+				<div class="right-sec-col head-clr container">
+					<h3>Magna etiam</h3>
+					<p>Fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem sed euismod placerat. Vivamus porttitor et magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper lorem ipsum.</p>
+					<button class="btn">learn more</button>
+				</div>
+
+				<div class="right-sec-col container">
+					<h3 class="right-sec-2nd-3rd-head head-clr">Magna etiam</h3>
+					<img src="assets/media/pic05.jpg">
+					<p>September 19, 2016</p>
+					<h3 class="head-clr">Non velit accumsan cursus gravida amet sapien</h3>
+					<p>Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis varius.</p>
+					<button class="btn">continue reading</button>
+				</div>
+
+				<!-- right-sec-detail list -->
+				<div class="container">
+					<div class="right-sec-detail-list">
+						<h3 class="right-sec-2nd-3rd-head head-clr">Arcu dolore</h3>
+						<h5 class="primary-clr">Etiam quis viverra lorem in semper lorem.</h5>
+						<p>September 15, 2016</p>
+					</div>
+
+					<div class="right-sec-detail-list">
+						<h5 class="primary-clr">Sed nisl arcu euismod sit amet nisi euismod sed cursus elementum ipsum.</h5>
+						<p>September 15, 2016</p>
+					</div>
+
+					<div class="right-sec-detail-list">
+						<h5 class="primary-clr">Arcu vivamus quis venenatis orci lorem.</h5>
+						<p>September 15, 2016</p>
+					</div>
+
+					<div class="right-sec-detail-list">
+						<h5 class="primary-clr">Veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore magna.</h5>
+						<p>September 15, 2016</p>
+					</div>
+
+					<div class="right-sec-detail-list">
+						<h5 class="primary-clr">Mauris neque quam, fermentum ut nisl vitae</h5>
+						<p>September 15, 2016</p>
+					</div>
+
+					<div class="right-sec-detail-list">
+						<h5 class="primary-clr">Convallis maximus nisl sed mattis nunc id lorem euismod amet placerat.</h5>
+						<p>September 15, 2016</p>
+					</div>
+
+					<div class="right-sec-detail-list border-none">
+						<h5 class="primary-clr">Sed nisl arcu euismod sit amet nisi euismod sed cursus elementum ipsum.
+						</h5>
+						<p>September 15, 2016</p>
+					</div>
+
+					<button class="btn right-sec-btm-btn">more posts</button>
+				</div>
+			</aside>
+		</div>
+	</main>
+	<br>
+
+	<!-- footer -->
+	<footer class="footer">
+
+		<!-- bottom section -->
+		<div class="wrapper bottom-sec">
+			<section class="left-sec">
+				<div class="btm-left-sec inline-blk container">
+					<h3 class="head-clr">about us</h3>
+					<p>
+						Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur malesuada.
+					</p>
+					<p>Sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis.</p>
 					<button class="btn">learn more</button>
 				</div><!-- 
-
-		 --><div class="container icon-box  inline-blk">
-					<div>
-						<img src="assets/media/pic04.jpg">
+				 --><div class="btm-mid-sec inline-blk">
+					<div class="btm-img-sec">
+						<img class="round-img" src="assets/media/pic06.jpg">
+						<h5 class="primary-clr inline-blk">John Doe</h5>
+						<p class="inline-blk">Lorem semper magna etiam</p>
 					</div>
-					<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
-					<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
-					<button class="btn">learn more</button>
+
+					<div class="btm-img-sec">
+						<img class="round-img" src="assets/media/pic07.jpg">
+						<h5 class="primary-clr inline-blk">Jane Doe</h5>
+						<p class="inline-blk">Consequat nulla dolor blandit</p>
+					</div>
+
+					<div class="btm-img-sec">
+						<img class="round-img" src="assets/media/pic09.jpg">
+						<h5 class="primary-clr inline-blk">Mike Smith</h5>
+						<p class="inline-blk">Consequat nulla dolor blandit</p>
+					</div>
+				</div><!-- 
+				 --><div class="right-sec inline-blk btm-right-sec">
+				 	<div class="right-btm-icn">
+						<h4 class="inline-blk head-clr">contact us</h4>
+						<div>
+							<span class="icon-bg btm-sec-icon inline-blk"><i class="fas fa-home"></i></span>
+							<p class="inline-blk">
+								1234 Somewhere Road #80486
+								<br>
+								Nashville, TN 00000
+							</p>
+						</div>
+						<div>
+							<span class="icon-bg btm-sec-icon inline-blk"><i class="fas fa-phone"></i></span>
+							<p class="inline-blk">(800) 555-0000 x12345</p>
+						</div>
+						<div>
+							<span class="icon-bg btm-sec-icon inline-blk"><i class="fas fa-envelope"></i></span>
+							<p class="inline-blk">hello@untitled.tld</p>
+						</div>
+						<div>
+							<span class="icon-bg btm-sec-icon inline-blk"><i class="fab fa-facebook-f"></i></span>
+							<p class="inline-blk">facebook.com/untitled-tld</p>
+						</div>
+						<div>
+							<span class="icon-bg btm-sec-icon inline-blk"><i class="fab fa-twitter"></i></span>
+							<p class="inline-blk">twitter.com/untitled-tld</p>
+						</div>
+					</div>
 				</div>
 			</section>
-		</aside><!-- 
-		 --><aside class="right-sec inline-blk wrapper">
-			<div class="head-clr container">
-				<h3>Magna etiam</h3>
-				<p>Fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem sed euismod placerat. Vivamus porttitor et magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper lorem ipsum.</p>
-				<button class="btn">learn more</button>
-			</div>
-
-			<hr>
-			<div class="container">
-				<h3 class="head-clr">Magna etiam</h3>
-				<img src="assets/media/pic05.jpg">
-				<p>September 19, 2016</p>
-				<h3 class="head-clr">Non velit accumsan cursus gravida amet sapien</h3>
-				<p>Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis varius.</p>
-				<button class="btn">continue reading</button>
-			</div>
-			<hr>
-			<div class="data container">
-				<h3 class="head-clr">Arcu dolore</h3>
-				<h5 class="primary-clr">Etiam quis viverra lorem in semper lorem.</h5>
-				<p>September 15, 2016</p>
-				<hr>
-				<h5 class="primary-clr">Sed nisl arcu euismod sit amet nisi euismod sed cursus elementum ipsum.</h5>
-				<p>September 15, 2016</p>
-				<hr>
-				<h5 class="primary-clr">Arcu vivamus quis venenatis orci lorem.</h5>
-				<p>September 15, 2016</p>
-				<hr>
-				<h5 class="primary-clr">Veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore magna.</h5>
-				<p>September 15, 2016</p>
-				<hr>
-				<h5 class="primary-clr">Mauris neque quam, fermentum ut nisl vitae</h5>
-				<p>September 15, 2016</p>
-				<hr>
-				<h5 class="primary-clr">Convallis maximus nisl sed mattis nunc id lorem euismod amet placerat.</h5>
-				<p>September 15, 2016</p>
-				<hr>
-				<h5 class="primary-clr">Sed nisl arcu euismod sit amet nisi euismod sed cursus elementum ipsum.
-				</h5>
-				<p>September 15, 2016</p>
-				<button class="btn right-btm-btn">more posts</button>
-			</div>
-		</aside>
-
-		<section class="bottom-sec">
-			<div class="inline-blk inline-blk wrapper">
-				<h3 class="head-clr">about us</h3>
-				<p>
-					Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur malesuada.
-				</p>
-				<p>Sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis.</p>
-				<button class="btn">learn more</button>
-				<div>
-					<div class="mid-sec inline-blk">
-						<img class="round-img" src="assets/media/pic06.jpg">
-						<h5 class="head-clr">John Doe</h5>
-						<p>Lorem semper magna etiam</p>
-					</div>
-
-					<div>
-						<img class="round-img" src="assets/media/pic07.jpg">
-						<h5 class="head-clr">Jane Anderson</h5>
-						<p>Etiam feugiat adipiscing veroeros</p>
-					</div>
-
-					<div>
-						<img class="round-img" src="assets/media/pic09.jpg">
-						<h5 class="head-clr">Mike Smith</h5>
-						<p>Consequat nulla dolor blandit</p>
-					</div>
-				</div><!-- 
-
-				 --><div class="contacts inline-blk">
-					<h4 class="head-clr">contact us</h4>
-					<span><i class="fas fa-home"></i></span>
-					<p>
-						1234 Somewhere Road #80486
-						Nashville, TN 00000
-					</p>
-					<span><i class="fas fa-home"></i></span>
-					<p>(800) 555-0000 x12345</p>
-					<span><i class="fas fa-envelope"></i></span>
-					<p>hello@untitled.tld</p>
-					<span><i class="fab fa-facebook-f"></i></span>
-					<p>facebook.com/untitled-tld</p>
-					<span><i class="fab fa-twitter"></i></span>
-					<p>twitter.com/untitled-tld</p>
-				</div>
-			</div>
-		</section>	
-	</main>
-
-	<footer>
+		</div>	
 		<small>&copy untitled. all rights reserved.</small>
 	</footer>
 </body>
