add left-sec img, txt-box txt-cntr

--- a/10_days_assignment/templated.co/layout-2/index.html
+++ b/10_days_assignment/templated.co/layout-2/index.html
@@ -50,7 +50,7 @@
 
 			<!-- left aside section -->
 			<aside class="left-sec inline-blk">
-				<div class="bg-img">
+				<div class="bg-img-box">
 					<img class="img" src="assets/media/slide04.jpg">
 					<div class="img-txt sec-clr">
 						<h1>Ultricies sed magna</h1>
@@ -60,7 +60,7 @@
 							Sed mattis nunc lorem
 							Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida fringilla.
 						</p>
-						<button class="btn sec-clr">click here for more</button>
+						<button class="btn img-btn sec-clr">click here for more</button>
 					</div>
 				</div>
 				<div class="container txt-box">
@@ -112,35 +112,43 @@
 					 	<div class="inline-blk">
 							<img src="assets/media/pic01.jpg">
 						</div>
-						<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
-						<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
-						<button class="btn">learn more</button>
+						<div class="txt-box">
+							<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
+							<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
+							<button class="btn">learn more</button>
+						</div>
 					</div><!-- 
 					 --><div class="container icon-box inline-blk">
 						<div class="inline-blk">
 							<img src="assets/media/pic02.jpg">
 						</div>
-						<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
-						<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
-						<button class="btn">learn more</button>
+						<div class="txt-box">
+							<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
+							<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
+							<button class="btn">learn more</button>
+						</div>
 					</div><!-- 
 
 			 --><div class="container icon-box lft-vt-clm inline-blk">
 						<div>
 							<img src="assets/media/pic03.jpg">
 						</div>
-						<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
-						<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
-						<button class="btn">learn more</button>
+						<div class="txt-box">
+							<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
+							<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
+							<button class="btn">learn more</button>
+						</div>
 					</div><!-- 
 
 			 --><div class="container icon-box  inline-blk">
 						<div>
 							<img src="assets/media/pic04.jpg">
 						</div>
-						<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
-						<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
-						<button class="btn">learn more</button>
+						<div class="txt-box">
+							<h4 class="head-clr">Sit amet posuere risus amet lorem faucibus lectus</h4>
+							<p>Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac magna consequat.</p>
+							<button class="btn">learn more</button>
+						</div>
 					</div>
 				</section>
 			</aside><!--
