ads botm-mid-sec strong and img+txt-box vtcl-alin

--- a/10_days_assignment/templated.co/layout-2/index.html
+++ b/10_days_assignment/templated.co/layout-2/index.html
@@ -234,20 +234,26 @@
 				 --><div class="btm-mid-sec inline-blk">
 					<div class="btm-img-sec">
 						<img class="round-img" src="assets/media/pic06.jpg">
-						<h5 class="primary-clr inline-blk">John Doe</h5>
-						<p class="inline-blk">Lorem semper magna etiam</p>
+						<div class="inline-blk name-details">
+							<strong class="names primary-clr">John Doe</strong>
+							<p>Lorem semper magna etiam</p>
+						</div>
 					</div>
 
 					<div class="btm-img-sec">
 						<img class="round-img" src="assets/media/pic07.jpg">
-						<h5 class="primary-clr inline-blk">Jane Doe</h5>
-						<p class="inline-blk">Consequat nulla dolor blandit</p>
+						<div class="inline-blk name-details">
+							<strong class="names primary-clr">Jane Doe</strong>
+							<p>Consequat nulla dolor blandit</p>
+						</div>
 					</div>
 
 					<div class="btm-img-sec">
 						<img class="round-img" src="assets/media/pic09.jpg">
-						<h5 class="primary-clr inline-blk">Mike Smith</h5>
-						<p class="inline-blk">Consequat nulla dolor blandit</p>
+						<div class="inline-blk name-details">
+							<strong class="names primary-clr">Mike Smith</strong>
+							<p>Consequat nulla dolor blandit</p>
+						</div>
 					</div>
 				</div><!-- 
 				 --><div class="right-sec inline-blk btm-right-sec">
