--- a/10_days_assignment/templated.co/layout-2/index.html
+++ b/10_days_assignment/templated.co/layout-2/index.html
@@ -5,12 +5,17 @@
 	<title>layout-2</title>
 	<link rel="stylesheet" type="text/css" href="assets/stylesheet/main.css">
 
+	<!-- font familly -->
 	<link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500|Source+Sans+Pro:200,300,400,700" rel="stylesheet">
 
+	<!-- font-awsome icons -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 </head>
 <body>
+
+	<!-- Header Elements -->
+
 	<header class="head cf">
 		<span class="inline-blk sec-clr"><a class="logo inline-blk sec-clr" href="#">faction</a> by pixelarity</span>
 		<nav class="nav-lst inline-blk">
