add media-form modifications, added videos+audio formats,posters

--- a/10_days_assignment/media-and-forms/index.html
+++ b/10_days_assignment/media-and-forms/index.html
@@ -57,15 +57,15 @@
 
 
 			audio
-			 --><div class="inline-blk media">
+			 --><div class="inline-blk media position">
 
-				<figure>
+				<figure class="">
 
 					<audio controls>
 
-						<source src="assets/media/flute-vs-piano-42794.mp3" type=".mp3">
-						<source src="assets/media/flute-vs-piano-42794.mp3" type="">
-						<source src="assets/media/flute-vs-piano-42794.mp3" type="">
+						<source src="assets/media/flute-vs-piano.mp3" type="audio/mp3">
+						<source src="assets/media/flute-vs-piano.ogg" type="audio/ogg">
+						<source src="assets/media/flute-vs-piano.wav" type="audio/wav">
 
 					</audio>
 
@@ -89,11 +89,11 @@
 
 				<figure>
 
-					<video controls>
+					<video controls poster="assets/media/image.jpg">
 
-						<source src="assets/media/Pexels Videos.mp4" type="mp4">
-						<source src="assets/media/Pexels Videos.mp4" type="">
-						<source src="assets/media/Pexels Videos.mp4" type="">
+						<source src="assets/media/new.mp4" type="video/mp4">
+						<source src="assets/media/new.flv" type="video/flv">
+						<source src="assets/media/new.avi" type="video/avi">
 
 					</video>
 
