--- a/10_days_assignment/media-and-forms/index.html
+++ b/10_days_assignment/media-and-forms/index.html
@@ -12,6 +12,9 @@
 	<!-- google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
 
+	<!-- font awesome icon  -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+
 
 </head>
 
