add th, td bg-clr & img-auto-gap remvl

--- a/10_days_assignment/tables/index.html
+++ b/10_days_assignment/tables/index.html
@@ -23,7 +23,7 @@
 		<header class="header cf">
 
 			<!-- logo -->
-			<a class="logo" href="#">altcampus</a>
+			<a class="logo" href="https://www.altcampus.io" target="blank">altcampus</a>
 
 			<ul class="primarry-nav">
 				<li class="list inline-blk"><a href="#portfolio-sec">portfolio</a></li>
@@ -37,7 +37,11 @@
 		<!-- hero section -->
 		<section class="hero container">
 			
-			<img src="assets/media/logo.png" alt="altcampus-logo-img">
+			<a href="https://altcampus.io" target="blank">
+
+				<img src="assets/media/logo.png" alt="altcampus-logo-img">
+
+			</a>
 
 			<h1>altcampus an <br> alternative to collge</h1>
 
