--- a/10_days_assignment/tables/index.html
+++ b/10_days_assignment/tables/index.html
@@ -140,7 +140,7 @@
 		<!-- map section -->
 		<section class="map-sec container">
 
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6752.357061554738!2d76.36477582735449!3d32.19941967460084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391b522c7cd8b85b%3A0x9d68653444d4c03a!2sRakkar%2C+Himachal+Pradesh!5e0!3m2!1sen!2sin!4v1544943392485" width="1500" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6752.357061554738!2d76.36477582735449!3d32.19941967460084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391b522c7cd8b85b%3A0x9d68653444d4c03a!2sRakkar%2C+Himachal+Pradesh!5e0!3m2!1sen!2sin!4v1544943392485" width="90%" height="" frameborder="0" style="border:0" allowfullscreen></iframe>
 			
 
 		</section>
