--- a/10_days_assignment/tables/index.html
+++ b/10_days_assignment/tables/index.html
@@ -3,6 +3,9 @@
 	<head>
 
 		<meta charset="utf-8">
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<title>tables-layout</title>
 
 
@@ -39,7 +42,7 @@
 			
 			<a href="https://altcampus.io" target="blank">
 
-				<img src="assets/media/logo.png" alt="altcampus-logo-img">
+				<img class="hero-img" src="assets/media/logo.png" alt="altcampus-logo-img">
 
 			</a>
 
@@ -125,7 +128,7 @@
 					<br>
 					<input class="info-input" type="text" name="name" placeholder="phone no." required>
 					<br>
-					<textarea rows="20" placeholder="message"></textarea>
+					<textarea cols="10" placeholder="message"></textarea>
 					<br>
 					<button class="btn form-btn primary-clr" type="submit" value="send">send</button>
 
@@ -140,9 +143,12 @@
 		<!-- map section -->
 		<section class="map-sec container">
 
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6752.357061554738!2d76.36477582735449!3d32.19941967460084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391b522c7cd8b85b%3A0x9d68653444d4c03a!2sRakkar%2C+Himachal+Pradesh!5e0!3m2!1sen!2sin!4v1544943392485" width="90%" height="" frameborder="0" style="border:0" allowfullscreen></iframe>
-			
+			<div class="responsive-map">
 
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6752.357061554738!2d76.36477582735449!3d32.19941967460084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391b522c7cd8b85b%3A0x9d68653444d4c03a!2sRakkar%2C+Himachal+Pradesh!5e0!3m2!1sen!2sin!4v1544943392485" width="90%" height="500" frameborder="20%" style="border:0" allowfullscreen></iframe>
+
+			</div>
+			
 		</section>
 
 
