add textarea height removal

--- a/10_days_assignment/tables/index.html
+++ b/10_days_assignment/tables/index.html
@@ -128,7 +128,7 @@
 					<br>
 					<input class="info-input" type="text" name="name" placeholder="phone no." required>
 					<br>
-					<textarea cols="10" placeholder="message"></textarea>
+					<textarea  name="message" placeholder="message" rows="6"></textarea> 
 					<br>
 					<button class="btn form-btn primary-clr" type="submit" value="send">send</button>
 
