add complete responsive flex

--- a/10_days_assignment/flex/index.html
+++ b/10_days_assignment/flex/index.html
@@ -8,86 +8,103 @@
 		<!-- css stylesheet -->
 		<link rel="stylesheet" type="text/css" href="assets/stylesheet/main.css">
 
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
+
 	</head>
+
 	<body>
-		<header class="header">
-			<h1>jackets</h1>
+
+		<!-- header wrapper -->
+		<div class="wrapper">
+
+			<!-- header section -->
+			<header class="header">
+				<h1>jackets</h1>
 				<div class="option-cntnr">
 					<p>filter by:</p>
-					<select class="select">
-						<option>all jackets</option>
-						<option>all jackets</option>
-						<option>all jackets</option>
-						<option>all jackets</option>
-						<option>all jackets</option>
-
-					</select>
+					<div class="select-container">
+						<i class="icon-select-arrows"></i>
+						<select class="select">
+							<option>all jackets</option>
+							<option>all jackets</option>
+							<option>all jackets</option>
+							<option>all jackets</option>
+							<option>all jackets</option>
+						</select>
+					</div>
 				</div>
-
 				<div class="option-cntnr">
 					<p>sort by:</p>
-					<select class="select">
-						<option>featured</option>
-						<option>featured</option>
-						<option>featured</option>
-						<option>featured</option>
-						<option>featured</option>
-					</select>
+					<div class="select-container">
+						<i class="icon-select-arrows"></i>
+						<select class="select">
+							<option>featured</option>
+							<option>featured</option>
+							<option>featured</option>
+							<option>featured</option>
+							<option>featured</option>
+						</select>
+					</div>
 				</div>
-		</header>
-		<div class="img-sec-cntnr">
-			<section class="img-sec">
-				<div class="img-box">
-					<img src="assets/media/pic1.jpeg">
-					<h2>winter jacket</h2>
-					<p>$99.99</p>
-				</div>
-				<div class="img-box">
-					<img src="assets/media/pic1.jpeg">
-					<h2>winter jacket</h2>
-					<p>$99.99</p>
-				</div>
-				<div class="img-box">
-					<img src="assets/media/pic1.jpeg">
-					<h2>winter jacket</h2>
-					<p>$99.99</p>
-				</div>
-				<div class="img-box">
-					<img src="assets/media/pic1.jpeg">
-					<h2>winter jacket</h2>
-					<p>$99.99</p>
-				</div>
-				<div class="img-box">
-					<img src="assets/media/pic1.jpeg">
-					<h2>winter jacket</h2>
-					<p>$99.99</p>
-				</div>
-				<div class="img-box">
-					<img src="assets/media/pic1.jpeg">
-					<h2>winter jacket</h2>
-					<p>$99.99</p>
-				</div>
-				<div class="img-box">
-					<img src="assets/media/pic1.jpeg">
-					<h2>winter jacket</h2>
-					<p>$99.99</p>
-				</div>
-				<div class="img-box">
-					<img src="assets/media/pic1.jpeg">
-					<h2>winter jacket</h2>
-					<p>$99.99</p>
-				</div>
-				<div class="img-box">
-					<img src="assets/media/pic1.jpeg">
-					<h2>winter jacket</h2>
-					<p>$99.99</p>
-				</div>
-				<div class="img-box">
-					<img src="assets/media/pic1.jpeg">
-					<h2>winter jacket</h2>
-					<p>$99.99</p>
-				</div>
+			</header>
+		</div>
 
+		<!-- img section container -->
+		<div class="img-sec-cntnr wrapper">
+			<!-- img section -->
+			<section class="img-sec">
+				<div class="img-box big-img">
+					<img src="assets/media/pic1.jpeg">
+					<h2>winter jacket</h2>
+					<p>$99.99</p>
+				</div>
+				<div class="img-box big-img">
+					<img src="assets/media/pic1.jpeg">
+					<h2>winter jacket</h2>
+					<p>$99.99</p>
+				</div>
+				<div class="img-box">
+					<img src="assets/media/pic1.jpeg">
+					<h2>winter jacket</h2>
+					<p>$99.99</p>
+				</div>
+				<div class="img-box">
+					<img src="assets/media/pic1.jpeg">
+					<h2>winter jacket</h2>
+					<p>$99.99</p>
+				</div>
+				<div class="img-box">
+					<img src="assets/media/pic1.jpeg">
+					<h2>winter jacket</h2>
+					<p>$99.99</p>
+				</div>
+				<div class="img-box">
+					<img src="assets/media/pic1.jpeg">
+					<h2>winter jacket</h2>
+					<p>$99.99</p>
+				</div>
+				<div class="img-box">
+					<img src="assets/media/pic1.jpeg">
+					<h2>winter jacket</h2>
+					<p>$99.99</p>
+				</div>
+				<div class="img-box">
+					<img src="assets/media/pic1.jpeg">
+					<h2>winter jacket</h2>
+					<p>$99.99</p>
+				</div>
+				<div class="img-box">
+					<img src="assets/media/pic1.jpeg">
+					<h2>winter jacket</h2>
+					<p>$99.99</p>
+				</div>
+				<div class="img-box">
+					<img src="assets/media/pic1.jpeg">
+					<h2>winter jacket</h2>
+					<p>$99.99</p>
+				</div>
 			</section>
 		</div>
 	</body>
