grid practice upto 20 tutorials

--- a/10_days_assignment/css-grid/practie/index.html
+++ b/10_days_assignment/css-grid/practie/index.html
@@ -80,7 +80,7 @@
 			</div> -->
 		
 			<!-- placing grid items -->
-			<div class="box-cont-6">
+			<!-- <div class="box-cont-6">
 				<div class="exercise-6">hello </div>
 				<div class="exercise-6">hello </div>
 				<div class="exercise-6">hello </div>
@@ -109,6 +109,73 @@
 				<div class="exercise-6">hello </div>
 				<div class="exercise-6">hello </div>
 				<div class="exercise-6">hello </div>
+			</div> -->
+			
+			<!-- div.container>div.item$*8 -->  <!-- shortcut for multiple classes -->
+			<!-- <div class="container-7"> -->
+				<!-- .item$20 --><!-- <<<--==================>>>> -->
+			<!-- 	<div class="item item1"></div>
+				<div class="item item2"></div>
+				<div class="item item3"></div>
+				<div class="item item4"></div>
+				<div class="item item5"></div>
+				<div class="item item6"></div>
+				<div class="item item7"></div>
+				<div class="item item8"></div>
+				<div class="item item9"></div>
+				<div class="item item10"></div>
+				<div class="item item11"></div>
+				<div class="item item12"></div>
+				<div class="item item13"></div>
+				<div class="item item14"></div>
+				<div class="item item15"></div>
+				<div class="item item16"></div>
+				<div class="item item17"></div>
+				<div class="item item18"></div>
+				<div class="item item19"></div>
+				<div class="item item20"></div>
+				<div class="item item21"></div>
+				<div class="item item22"></div>
+				<div class="item item23"></div>
+				<div class="item item24"></div>
+				<div class="item item25"></div>
+				<div class="item item26"></div>
+				<div class="item item27"></div>
+				<div class="item item28"></div>
+				<div class="item item29"></div>
+				<div class="item item30"></div>
+			</div> -->
+
+			<!-- <div class="container-8">
+				<div class="item item1">1</div>
+				<div class="item item2">2</div>
+				<div class="item item3">3</div>
+				<div class="item item4">4</div>
+				<div class="item item5">5</div>
+				<div class="item item6">6</div>
+				<div class="item item7">7</div>
+				<div class="item item8">8</div>
+				<div class="item item10">9</div>
+				<div class="item item11">10</div>
+				<div class="item item12">11</div>
+				<div class="item item13">12</div>
+				<div class="item item14">13</div>
+				<div class="item item15">14</div>
+				<div class="item item16">15</div>
+				<div class="item item17">16</div>
+				<div class="item item18">17</div>
+				<div class="item item19">18</div>
+				<div class="item item20">19</div>
+				<div class="item item20">20</div>
+			</div> -->
+
+<!-- ==========container 9 ============-->
+			<div class="container-9">
+				<div class="item item1">1</div>
+				<div class="item item2">hello everyone</div>
+				<div class="item item3">3</div>
+				<div class="item item4">4</div>
 			</div>
+
 	</body>
 </html>
