add new 2 items in html and css

--- a/10_days_assignment/css-grid/layout-2/index.html
+++ b/10_days_assignment/css-grid/layout-2/index.html
@@ -42,19 +42,25 @@
 				<div class="item item5">
 					<img src="assets/media/cat4.jpg" alt="cat-img">
 				</div>
-				<div class="item item6 content">
-					<h3>the title</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam fugiat nesciunt numquam reprehenderit quo commodi earum eum explicabo temporibus doloremque.</p>
-					<a href="#">learn more...</a>
+				<div class="item item6">
+					<img src="assets/media/cat6.jpg" alt="cat-img">
 				</div>
 				<div class="item item7">
 					<img src="assets/media/cat5.jpeg" alt="cat-img">
 				</div>
-				<div class="item item8">
-					<img src="assets/media/cat6.jpg" alt="cat-img">
+				<div class="item item8 content">
+					<h3>the title</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam fugiat nesciunt numquam reprehenderit quo commodi earum eum explicabo temporibus doloremque.</p>
+					<a href="#">learn more...</a>
 				</div>
 				<div class="item item9">
+					<img src="assets/media/cat8.jpeg" alt="cat-img">
+				</div>
+				<div class="item item10">
 					<img src="assets/media/cat7.jpg" alt="cat-img">
+				</div>
+				<div class="item item11">
+					<img src="assets/media/cat3.jpg" alt="cat-img">
 				</div>
 			</section>
 		</main>
