--- a/10_days_assignment/animation/layout-1/index.html
+++ b/10_days_assignment/animation/layout-1/index.html
@@ -5,15 +5,43 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Dropdown Menu</title>
-		<link rel="stylesheet" href="style/style.css">
+		<link rel="stylesheet" href="assets/stylesheet/main.css">
 	</head>
 	<body>
-		<h1>Hover Notification Badge</h1>
-		<ul class="menu">
-			<li><a href="#" data-bubble="117">Messages</a></li>
-			<li><a href="#" data-bubble="4">New Posts</a></li>
-			<li><a href="#" data-bubble="19">Notifications</a></li>
-			<li><a class="gold" href="#" data-bubble="1">Hidden Coins</a></li>
-		</ul>
+		<div class="container">
+		  <h1 class="title">Dropdown Menu</h1>
+		  <ul>
+		    <li class="dropdown">
+		      <input type="checkbox" />
+		      <a href="#" data-toggle="dropdown">First Menu</a>
+		      <ul class="dropdown-menu">
+		        <li><a href="#">Home</a></li>
+		        <li><a href="#">About Us</a></li>
+		        <li><a href="#">Services</a></li>
+		        <li><a href="#">Contact</a></li>
+		      </ul>
+		    </li>
+		    <li class="dropdown">
+		      <input type="checkbox" />
+		      <a href="#" data-toggle="dropdown">Second Menu</a>
+		      <ul class="dropdown-menu">
+		        <li><a href="#">Home</a></li>
+		        <li><a href="#">About Us</a></li>
+		        <li><a href="#">Services</a></li>
+		        <li><a href="#">Contact</a></li>
+		      </ul>
+		    </li>
+		    <li class="dropdown">
+		      <input type="checkbox" />
+		      <a href="#" data-toggle="dropdown">Third Menu</a>
+		      <ul class="dropdown-menu">
+		        <li><a href="#">Home</a></li>
+		        <li><a href="#">About Us</a></li>
+		        <li><a href="#">Services</a></li>
+		        <li><a href="#">Contact</a></li>
+		      </ul>
+		    </li>
+		  </ul>
+		</div>
 	</body>
 </html>
